# claude-code-hooks-observatory

./: .gitignore  AGENTS.md  DEVELOPER_GUIDELINES.md  FUTURE_WORK.md  README.md  install-hooks.py  pyproject.toml  server.py  test_server.py
agents/: adding-hook-support.md  coding-standards.md  core-principles.md  documentation-guide.md  testing-guide.md  unix-socket-guide.md
configs/: hooks-global.json  hooks-minimal.json  hooks-project.json
docs/: ADAPTIVE_TABLE.md  CONCURRENCY.md
docs/plans/: 2026-02-06-claude-code-hooks-observatory-design.md  2026-02-09-restructure-tcp-unix-variants.md  2026-02-09-rust-observatory-design.md  2026-02-19-watch-mode-design.md
jsonl-fanout/: README.md  fanout.py  subscribe.py  test_fanout.py
ramblings/: 2026-02-17--plugindir-hooks-interaction-and-missing-events.md
rust-observatory/: Cargo.toml  README.md  run-with-tee-logrotator.sh  server.EDU_NOTES.md
rust-observatory/configs/: hooks-minimal.json  hooks-tcp.json  hooks-unix.json
rust-observatory/docs/: TESTING.md
rust-observatory/src/: main.rs
rust-observatory/tests/: integration_tests.rs
scripts/: query-hooks.DEV_NOTES.md  query-hooks.README.md  query-hooks.py
tcp-observatory/: README.md  install-hooks.EDU_NOTES.md  install-hooks.py  run-with-tee-logrotator.sh  server.EDU_NOTES.md  server.py
unix-socket-observatory/: README.md  SECURITY.md  install-hooks.EDU_NOTES.md  install-hooks.py  run-with-tee-logrotator.sh  server.EDU_NOTES.md  server.py  server_selectors.EDU_NOTES.md  server_selectors.py  test_server.py  test_server_selectors.py
(+10 files in other folders)
