[package]
name = "rust-observatory"
version = "0.1.0"
edition = "2021"
description = "Educational Rust HTTP server for observing Claude Code hook events (TCP + Unix socket)"
license = "MIT"

[[bin]]
name = "rust-observatory"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
libc = "0.2"
ansi_colours = "1"   # RGB → 256-color approximation (matches pygments Terminal256Formatter)

[profile.release]
strip = true
lto = true
